Updated Social media and twitter card tags with codebeasts image

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <meta property="og:url" content="https://codebeasts.lovable.app/" />
     <meta property="og:title" content="CodeBeasts - AI-Generated GitHub Profile Creatures" />
     <meta property="og:description" content="Turn your GitHub profile into a unique AI-generated creature!" />
-    <meta property="og:image" content="https://codebeasts.lovable.app/lovable-uploads/6e48cfe8-7c75-4565-939d-f665321ddd3a.png" />
+    <meta property="og:image" content="https://codebeasts.lovable.app/codebeasts_screen.png" />
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="CodeBeasts - AI-Generated GitHub Profile Creatures" />
     <meta name="twitter:description" content="Turn your GitHub profile into a unique AI-generated creature!" />
-    <meta name="twitter:image" content="https://codebeasts.lovable.app/lovable-uploads/6e48cfe8-7c75-4565-939d-f665321ddd3a.png" />
+    <meta name="twitter:image" content="https://codebeasts.lovable.app/codebeasts_screen.png" />
   </head>
 
   <body>
